--- a/OctoBot/OctoBot.csproj
+++ b/OctoBot/OctoBot.csproj
@@ -6,13 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="2.0.0-beta2-00965" />
-    <PackageReference Include="Discord.Net.Commands" Version="2.0.0-beta2-00965" />
-    <PackageReference Include="Discord.Net.Core" Version="2.0.0-beta2-00965" />
-    <PackageReference Include="Discord.Net.Rest" Version="2.0.0-beta2-00965" />
+    <PackageReference Include="Discord.Net" Version="2.0.0-beta2-00969" />
+    <PackageReference Include="Discord.Net.Commands" Version="2.0.0-beta2-00969" />
+    <PackageReference Include="Discord.Net.Core" Version="2.0.0-beta2-00969" />
+    <PackageReference Include="Discord.Net.Providers.WS4Net" Version="2.0.0-beta2-00969" />
+    <PackageReference Include="Discord.Net.Rest" Version="2.0.0-beta2-00969" />
     <PackageReference Include="Discord.Net.Rpc" Version="2.0.0-beta-00860" />
-    <PackageReference Include="Discord.Net.Webhook" Version="2.0.0-beta2-00965" />
-    <PackageReference Include="Discord.Net.WebSocket" Version="2.0.0-beta2-00965" />
+    <PackageReference Include="Discord.Net.Webhook" Version="2.0.0-beta2-00969" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="2.0.0-beta2-00969" />
   </ItemGroup>
 
 </Project>
