--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,15 @@
 *.userosscache
 *.sln.docstates
 *.json
+*.png
+*.gif
+*.jpg
+*.jpeg
+*.txt
+*.docx
+*.mp3
+*.svg
+*.pdf
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
