--- a/OctoBot/OctoBot.csproj
+++ b/OctoBot/OctoBot.csproj
@@ -2,18 +2,27 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>7.1</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="2.0.0-beta2-00970" />
-    <PackageReference Include="Discord.Net.Commands" Version="2.0.0-beta2-00970" />
-    <PackageReference Include="Discord.Net.Core" Version="2.0.0-beta2-00970" />
-    <PackageReference Include="Discord.Net.Providers.WS4Net" Version="2.0.0-beta2-00970" />
-    <PackageReference Include="Discord.Net.Rest" Version="2.0.0-beta2-00970" />
+    <PackageReference Include="Discord.Net" Version="2.0.0-beta2-00975" />
+    <PackageReference Include="Discord.Net.Commands" Version="2.0.0-beta2-00975" />
+    <PackageReference Include="Discord.Net.Core" Version="2.0.0-beta2-00975" />
+    <PackageReference Include="Discord.Net.Providers.WS4Net" Version="2.0.0-beta2-00975" />
+    <PackageReference Include="Discord.Net.Rest" Version="2.0.0-beta2-00975" />
     <PackageReference Include="Discord.Net.Rpc" Version="2.0.0-beta-00860" />
-    <PackageReference Include="Discord.Net.Webhook" Version="2.0.0-beta2-00970" />
-    <PackageReference Include="Discord.Net.WebSocket" Version="2.0.0-beta2-00970" />
+    <PackageReference Include="Discord.Net.Webhook" Version="2.0.0-beta2-00975" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="2.0.0-beta2-00975" />
+    <PackageReference Include="Miki.Rest" Version="1.5.1" />
   </ItemGroup>
 
 </Project>
