--- a/OctoBot/OctoBot.csproj
+++ b/OctoBot/OctoBot.csproj
@@ -17,12 +17,18 @@
     <PackageReference Include="Discord.Net" Version="2.0.0-beta2-00975" />
     <PackageReference Include="Discord.Net.Commands" Version="2.0.0-beta2-00975" />
     <PackageReference Include="Discord.Net.Core" Version="2.0.0-beta2-00975" />
-    <PackageReference Include="Discord.Net.Providers.WS4Net" Version="2.0.0-beta2-00975" />
     <PackageReference Include="Discord.Net.Rest" Version="2.0.0-beta2-00975" />
     <PackageReference Include="Discord.Net.Rpc" Version="2.0.0-beta-00860" />
     <PackageReference Include="Discord.Net.Webhook" Version="2.0.0-beta2-00975" />
     <PackageReference Include="Discord.Net.WebSocket" Version="2.0.0-beta2-00975" />
-    <PackageReference Include="Miki.Rest" Version="1.5.1" />
+    <PackageReference Include="Miki.Rest" Version="1.6.0" />
+    <PackageReference Include="Ofl.Google.Maps" Version="3.0.22" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>C:\Users\baker\.nuget\packages\nunit\3.10.1\lib\netstandard2.0\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
