--- a/OctoBot/OctoBot.csproj
+++ b/OctoBot/OctoBot.csproj
@@ -14,13 +14,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="2.0.0-beta2-00975" />
-    <PackageReference Include="Discord.Net.Commands" Version="2.0.0-beta2-00975" />
-    <PackageReference Include="Discord.Net.Core" Version="2.0.0-beta2-00975" />
-    <PackageReference Include="Discord.Net.Rest" Version="2.0.0-beta2-00975" />
+    <PackageReference Include="Discord.Net" Version="2.0.1" />
+    <PackageReference Include="Discord.Net.Commands" Version="2.0.1" />
+    <PackageReference Include="Discord.Net.Core" Version="2.0.1" />
+    <PackageReference Include="Discord.Net.Rest" Version="2.0.1" />
     <PackageReference Include="Discord.Net.Rpc" Version="2.0.0-beta-00860" />
-    <PackageReference Include="Discord.Net.Webhook" Version="2.0.0-beta2-00975" />
-    <PackageReference Include="Discord.Net.WebSocket" Version="2.0.0-beta2-00975" />
+    <PackageReference Include="Discord.Net.Webhook" Version="2.0.1" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="2.0.1" />
     <PackageReference Include="Miki.Rest" Version="1.6.0" />
     <PackageReference Include="Ofl.Google.Maps" Version="3.0.22" />
   </ItemGroup>
